src/tests/lexical_analysis_error/invalid_characters/snapshots/monkey_interpreter__tests__lexical_analysis_error__invalid_characters__test_invalid_characters_case_1_lexical_analysis_error.snap
---
source: src/tests/lexical_analysis_error/invalid_characters/mod.rs
assertion_line: 15
expression: error
---
Err(
    "Unparsable context for lexical analysis \"`2`\" at line 1, column 9.",
)
