src/tests/lexical_analysis_error/invalid_characters/snapshots/monkey_interpreter__tests__lexical_analysis_error__invalid_characters__test_invalid_characters_case_2_lexical_analysis.snap
---
source: src/tests/lexical_analysis_error/invalid_characters/mod.rs
expression: error
---
Err(
    IllegalCharacter(
        '&',
    ),
)
